[package]
name = "otto"
version = "0.2.0"
authors = ["Rollie Ma <rollie@rollie.dev>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.42"
atom_syndication = "0.9.1"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
cron = "0.8.0"
fancy-regex = "0.4.1"
html2md = "0.2.10"
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4.0"
lettre = "0.10.0-alpha.4"
log = "0.4.14"
prometheus = { version = "0.11.0", features = ["process"] }
reqwest = { version = "0.11.0", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rss = "1.10.0"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
simple_logger = "1.11.0"
slack-hook = "0.8.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5.8"
wildmatch = "1.0.13"
